libstdc++-v3/include/bits/hashtable_policy.h
@@ -918,13 +918,15 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
       using __ebo_extract_key = _Hashtable_ebo_helper<0, _ExtractKey>;
       using __ebo_hash = _Hashtable_ebo_helper<1, _Hash>;
 
+    public:
+      // We need the default constructor for the local iterators.
+      _Hash_code_base() = default;
+
     protected:
       typedef void* 					__hash_code;
       typedef _Hash_node<_Value, false>			__node_type;
 
-      // We need the default constructor for the local iterators.
-      _Hash_code_base() = default;
-
+    protected:
       _Hash_code_base(const _ExtractKey& __ex, const _H1&, const _H2&,
 		      const _Hash& __h)
       : __ebo_extract_key(__ex), __ebo_hash(__h) { }
@@ -956,7 +958,6 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
 	std::swap(_M_ranged_hash(), __x._M_ranged_hash());
       }
 
-    protected:
       const _ExtractKey&
       _M_extract() const { return __ebo_extract_key::_S_cget(*this); }
 
@@ -1003,12 +1004,12 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
       hash_function() const
       { return _M_h1(); }
 
+      // We need the default constructor for the local iterators.
+      _Hash_code_base() = default;
+
     protected:
       typedef std::size_t 				__hash_code;
       typedef _Hash_node<_Value, false>			__node_type;
-
-      // We need the default constructor for the local iterators.
-      _Hash_code_base() = default;
 
       _Hash_code_base(const _ExtractKey& __ex,
 		      const _H1& __h1, const _H2& __h2,
